--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
   <div class="wrapper">
-    <!-- HEADER -->
-    <!-- SUB HEAD -->
+    <h2>Welcome to Riyadh</h2>
+    <h3>where a traditional past meets a modern future</h3>
 
     <div id="content">
-      <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
+      <img style="display: block;-webkit-user-select: none;margin: auto;cursor: zoom-out;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="https://s3.amazonaws.com/learn-verified/RIYADH-MOCKUP.jpg" width="800" height="1395">
     </div>
   </div>
 </body>
